Sponsors markup fixes, & sponsors behave better on mobile

--- a/css/include/home.styl
+++ b/css/include/home.styl
@@ -36,7 +36,7 @@
       background-position 91px top
 
 .sponsor-box
-  display block
-  position relative
-  float left
-  width 333px
+  display inline-block
+  width 330px
+  vertical-align top
+
