--- a/public/css/app.css
+++ b/public/css/app.css
@@ -124,4 +124,4 @@ section{min-width:0}
 .sponsor-section .medallion{display:block;position:relative;float:left;margin:30px 121px;width:91px;height:92px;background-image:url("/img/medals_sprite@2x.png");background-position:left top;background-size:cover;}
 .sponsor-section .medallion.silver{background-position:182px top}
 .sponsor-section .medallion.bronze{background-position:91px top}
-.sponsor-box{display:block;position:relative;float:left;width:333px}
+.sponsor-box{display:inline-block;width:330px;vertical-align:top}
